--- a/LAHJA/UI/Components/Auth/EmailConfirm.razor
+++ b/LAHJA/UI/Components/Auth/EmailConfirm.razor
@@ -1,9 +1,15 @@
 ﻿@page "/email-confirmation"
-@page "/email-confirmation/{Email}"
 
+
+@using LAHJA.Data.UI.Components.Base
+@using LAHJA.Data.UI.Templates.Auth
+@using LAHJA.Helpers.Enum
 @using MudBlazor
 
-<MudCard Class="w60 mx-auto my-5 p-6 rounded-lg shadow-lg text-center bg-white dark:bg-gray-900">
+@inject NavigationManager Navigation
+@inject TemplateAuth TemplateAuth
+
+<MudCard Class="w60 mx-auto my-5 p-6 rounded-lg shadow-lg text-center  dark:bg-gray-900">
     <MudCardContent>
         <MudIcon Icon="@Icons.Material.Filled.MarkEmailRead" Color="Color.Primary"  Class="mb-4" />
         <MudText Typo="Typo.h5" Class="font-bold">@Title</MudText>
@@ -22,22 +28,68 @@
 @code {
 
     [Parameter] public string Email { get; set; }
+    [Parameter] public string Url { get; set; }
+    [Parameter] public string Method { get; set; }
+
+
     [Parameter] public string Title { get; set; } = "تم إرسال رابط التحقق";
     [Parameter] public string Message { get; set; } = "لقد أرسلنا رابط التحقق إلى بريدك الإلكتروني. يرجى التحقق من صندوق البريد الخاص بك. إذا لم تستلم البريد، يمكنك إعادة إرساله.";
     [Parameter] public EventCallback OnResend { get; set; }
 
     private bool isResending = false;
 
+    protected override async Task OnInitializedAsync()
+    {
+
+        var uri = new Uri(Navigation.Uri);
+        var queryParams = System.Web.HttpUtility.ParseQueryString(uri.Query);
+        if (!string.IsNullOrEmpty(queryParams["Email"]))
+        {
+            Email = queryParams["Email"];
+        }
+        if (!string.IsNullOrEmpty(queryParams["Url"]))
+        {
+            Url = queryParams["Url"];
+        }
+
+        if (!string.IsNullOrEmpty(queryParams["Method"]))
+        {
+            Method = queryParams["Method"];
+        }
+
+        isResending = true;
+        await Task.Delay(10000);
+        isResending = false;
+    }
+
     private async Task ResendEmail()
     {
         isResending = true;
-
-        isResending = false;
+        
 
         if (OnResend.HasDelegate)
         {
             await OnResend.InvokeAsync();
         }
-      
+        else
+        {
+            if (!string.IsNullOrEmpty(Method))
+            {
+                var data = new DataBuildAuthBase { Email = Email };
+
+                if (Method == AuthMethods.ConfirmEmail.ToString())
+                {
+                    await TemplateAuth.ReSendConfirmationEmail(data);
+                }
+                else if (Method == AuthMethods.ForgetPassword.ToString())
+                {
+                    await TemplateAuth.ReForgetPassword(data);
+                }
+            }
+        }
+
+        await Task.Delay(10000);
+        isResending = false;
+
     }
 }
