--- a/LAHJA/UI/Components/Auth/ForgetPasswordForm.razor
+++ b/LAHJA/UI/Components/Auth/ForgetPasswordForm.razor
@@ -14,7 +14,8 @@
 
 
 @if (Message==null){
-        <MudCard  Class="w60 m-auto p-3 rounded-3 d-flex align-center justify-content-center flex-column">
+
+    <MudCard Class="w60 mx-auto my-5 p-6 rounded-lg shadow-lg text-center  dark:bg-gray-900 d-flex align-center justify-content-center flex-column">
 
 
             <MudForm Style="width:100% !important" @ref="form" @bind-IsValid="@success" @bind-Errors="@errors">
@@ -22,7 +23,7 @@
                    
                     <MudText> @MapperMessages.Map(ExplanatoryMessages.ENTER_YOUR_ACCOUNT_TOSEARCH_AR, ExplanatoryMessages.ENTER_YOUR_ACCOUNT_TOSEARCH_EN) </MudText>
 
-                <EmailField Class="my-5" FullWidth Label="Email" Required="true" @bind-Value="@email" />
+                     <EmailField Class="my-5" FullWidth Label="Email" Required="true" @bind-Value="@email" />
 
                     <MudButton Variant="Variant.Filled" FullWidth Color="@AppColors.BASE_COLOR_ENUM" OnClick="onSubmitConfirmEmail" Class="ml-auto my-5">
                         @MapperMessages.Map(TitleLabels.SEND_VERIFICATION_LINK_VIA_EMAIL_AR,TitleLabels.SEND_VERIFICATION_LINK_VIA_EMAIL_EN)</MudButton>
