--- a/LAHJA/UI/Templates/Auth/TemplateForgetPassword.razor
+++ b/LAHJA/UI/Templates/Auth/TemplateForgetPassword.razor
@@ -7,12 +7,16 @@
 
 @if(Template!=null){
 
-    <div Class="p-5">
-    <MudCard Class="m-auto d-flex flex-column justify-content-center align-items-center">
-            
-            <ForgetPasswordForm  Message="@Message" OnSubmited="Template.BuilderComponents.SubmitedForgetPassword" />
-    </MudCard>
-</div>
+    <div Class="p-5 m-auto">
+        <MudText Typo="Typo.h6">
+            <h4 class="d-flex align-center justify-content-center flex-column">
+                Forget Password
+            </h4>
+        </MudText>
+
+        <ForgetPasswordForm  Message="@Message" OnSubmited="Template.BuilderComponents.SubmitedForgetPassword" />
+  
+   </div>
 }
 @code{
 
