--- a/LAHJA/UI/Components/Auth/ReSendConfirmationEmail.razor
+++ b/LAHJA/UI/Components/Auth/ReSendConfirmationEmail.razor
@@ -9,14 +9,14 @@
 @inject NavigationManager navigation;
 @inherits CardAuth<DataBuildAuthBase>
 
+<MudText Typo="Typo.h6">
+    <h4 class="d-flex align-center justify-content-center flex-column">
+        Re Send Confirmation Email
+    </h4>
+</MudText>
 
+<MudCard Class="w60 mx-auto my-5 p-6 rounded-lg shadow-lg text-center dark:bg-gray-900  d-flex align-center justify-content-center flex-column">
 
-<MudContainer  class="w60 border m-auto  d-flex align-center justify-content-center flex-column">
-    <MudText Typo="Typo.h6">
-        <h4 class="d-flex align-center justify-content-center flex-column">
-            Re Send Confirmation Email
-        </h4>
-    </MudText>
 
     <MudForm Style="width:100% !important" @ref="form" @bind-IsValid="@success" @bind-Errors="@errors">
         <div class="d-flex align-center justify-content-center flex-column" style="padding:2% 2%;margin:auto 10px;width:100% !important ">
@@ -41,7 +41,7 @@
         </div>
     </MudForm>
 
-</MudContainer>
+</MudCard>
 
 
 
@@ -65,7 +65,7 @@
 
     async Task onSubmit()
     {
-        // if (form.IsValid)
+        if (form.IsValid)
         {
             // if (success)
             {
