--- a/LAHJA/UI/Components/Auth/ResetPasswordComponent.razor
+++ b/LAHJA/UI/Components/Auth/ResetPasswordComponent.razor
@@ -11,13 +11,13 @@
 
 
 
-     
 
-<MudContainer  class="w60 border m-auto  d-flex align-center justify-content-center flex-column">
+<MudText Typo="Typo.h6">
+    <h4 class="d-flex my-5 align-center justify-content-center flex-column"> Reset Password</h4>
+</MudText>
 
-    <MudText Typo="Typo.h6">
-        <h4 class="d-flex align-center justify-content-center flex-column"> Reset Password</h4>
-    </MudText>
+<MudCard Class="w60 mx-auto my-3 p-6 rounded-lg shadow-lg text-center  dark:bg-gray-900  d-flex align-center justify-content-center flex-column">
+
   
         
                 @if (isLoading)
@@ -35,7 +35,7 @@
 
  <MudForm Style="width:100% !important" @ref="form" @bind-IsValid="@success" @bind-Errors="@errors">
 
-        <EmailField  Class="my-5" FullWidth Label="Email" Required="true"  Value="@email" />
+        <EmailField  Class="my-5" FullWidth Label="Email" Required="true"  @bind-Value="@email" />
 
         <MudTextField T="string" InputType="InputType.Hidden" @bind-Value="code" Required="true" Class="mt-4" />
     
@@ -65,7 +65,7 @@
       
    </MudForm>
           
-        </MudContainer>
+        </MudCard>
 @*     </DialogContent>
 </MudDialog>
  *@
