--- a/LAHJA/UI/Components/Plan/TemplatePlan.razor
+++ b/LAHJA/UI/Components/Plan/TemplatePlan.razor
@@ -1,4 +1,5 @@
 ﻿@using Domain.ShareData
+@using LAHAJ.Loading
 @using LAHJA.Data.UI.Components.Base
 @using LAHJA.Data.UI.Components.Plan
 
@@ -16,10 +17,16 @@
     @* plan - card *@
     <div class="p-0 m2">
 
-        <MudCard Class="@("p-0  m-auto "+@Params.ClassImport)">
-            <MudText Typo="Typo.h6"  Class="@(Params.HeaderImport+" w-100")"> @Params.Name</MudText>
-            <small  class="mx-3">@Params.Description</small>
-            <MudCardContent>
+        <MudCard Class="@("p-0  position-relative m-auto "+@Params.ClassImport)">
+
+         @*    @if (_isLoading)
+            {
+                <Loading IsLoading="_isLoading" />
+
+            }else{ *@
+                <MudText Typo="Typo.h6"  Class="@(Params.HeaderImport+" w-100")"> @Params.Name</MudText>
+                <small  class="mx-3">@Params.Description</small>
+                <MudCardContent>
                 <MudText Typo="Typo.body1" Class="mb-1">
                     @if (Params.IsPaid==true)
                     {
@@ -81,6 +88,7 @@
                     
                 </MudCardActions>
             </MudCardContent>
+            @* } *@
 
         </MudCard>
     </div>
@@ -99,6 +107,8 @@
 
     [Parameter] public bool IsExpanded { get => _expanded; set=>_expanded=value; }
 
+    [Parameter] public bool IsLoading { get => _isLoading; set => _isLoading = value; }
+
     [Parameter] public bool IsDisplaySelectButton { get => _isDisplayButton; set=>_isDisplayButton=value; }
 
     [Parameter] public SubscriptionPlanInfo? Params { get; set; }
@@ -110,6 +120,7 @@
 
     private bool _isDisplayButton = true;
     private bool _expanded = false;
+    private bool _isLoading = true;
 
     private bool _allowUpdate = false;
 
