--- a/LAHJA/UI/Components/Auth/ReturnExternalLoginPage.razor
+++ b/LAHJA/UI/Components/Auth/ReturnExternalLoginPage.razor
@@ -1,17 +1,18 @@
 ﻿@page "/ReturnExternalLoginPage"
+@using Domain.Entities.Auth.Response
 @using LAHAJ.Loading
 @using LAHJA.Helpers.Enum
 @using LAHJA.Helpers.Services
 @using global::Shared.Constants.Router
  @inject NavigationManager Navigation
- @inject AuthService AuthService
+ @inject TokenService tokenService  ////TODO: 8-2
 
-<Loading />
+<Loading IsLoading="isLoading" />
 
 @code {
 
 
-    private string Token{ get; set; }
+    private bool isLoading = true;
 
 
     protected override async Task OnAfterRenderAsync(bool firstRender)
@@ -27,9 +28,16 @@
                 var token = queryParams["token"];
                 if (!string.IsNullOrEmpty(token))
                 {
-                    await AuthService.SaveAccessTokenInCookiesAsync(token);
-                    await AuthService.SaveAccessTokenInSessionAsync(token);
-                    await AuthService.SaveLoginTypeAsync(LoginType.Google);
+                    // await authService.SaveLoginAsync(new LoginResponse{ accessToken=token,
+                    //     refreshToken=token,expiresIn="External",tokenType="Google" });
+
+                    ////TODO: 8-2
+                    await tokenService.SaveTokenAsync(token);
+                    await tokenService.SaveTokenInSessionAsync(token);
+                    await tokenService.SaveLoginTypeAsync(LoginType.Google);
+                    
+                    isLoading = false;
+
                     Navigation.NavigateTo(RouterPage.HOME,true);
                 }
             }
