first commit azd 4

--- a/LAHJA/Pages/Counter.razor
+++ b/LAHJA/Pages/Counter.razor
@@ -1,19 +1,52 @@
 ﻿@page "/counter"
-@rendermode InteractiveServer
+@inject NotificationService NotificationService
+@inject NavigationManager NavigationManager
+@implements IAsyncDisposable
 
-<PageTitle>Counter</PageTitle>
+<h3>إرسال إشعار إلى مستخدم</h3>
 
-<h1>Counter</h1>
-
-<p role="status">Current count: @currentCount</p>
-
-<button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
+<input @bind="UserId" placeholder="أدخل UserId" />
+<input @bind="Message" placeholder="أدخل نص الإشعار" />
+<button @onclick="SendNotification">إرسال الإشعار</button>
 
 @code {
-    private int currentCount = 0;
+    private string UserId = "";
+    private string Message = "";
 
-    private void IncrementCount()
+    private async Task SendNotification()
     {
-        currentCount++;
+
+        if (!string.IsNullOrWhiteSpace(UserId))
+        {
+            await NotificationService.SendAlertToUser(UserId, Message);
+        }
+        else
+        {
+            await NotificationService.NotifyClients(Message);
+        }
+
+    }
+    protected override async Task OnInitializedAsync()
+    {
+        //   hubConnection = new HubConnectionBuilder()
+        //  .WithUrl(NavigationManager.ToAbsoluteUri("/notificationHub"))
+        //    .Build();
+        //     hubConnection.On<string>("ReceiveNotification", (message) =>
+        // {
+        //     Console.WriteLine("إشعار جديد: " + message);
+        // });
+
+        //     await hubConnection.StartAsync();
+
+    }
+
+
+
+    public async ValueTask DisposeAsync()
+    {
+        // if (hubConnection is not null)
+        // {
+        //     await hubConnection.DisposeAsync();
+        // }
     }
 }
