--- a/LAHJA/UI/Components/CreditCard.razor
+++ b/LAHJA/UI/Components/CreditCard.razor
@@ -39,7 +39,7 @@
 
     .holder-info-label,
     .expiry-date-label {
-        opacity: 0.8;
+        opacity: 1;
     }
 
     .holder-info-text,
@@ -69,7 +69,7 @@
                 <MudPaper Class="chip"></MudPaper>
             </MudItem>
             <MudItem xs="2">
-                <MudMenu Icon="@Icons.Material.Filled.MoreVert" Color="Color.Tertiary" Variant="Variant.Outlined">
+                <MudMenu Icon="@Icons.Material.Filled.MoreVert"  Variant="Variant.Outlined">
                     <MudMenuItem OnClick="@SetAsDefault">
                         <MudIcon Icon="@Icons.Material.Filled.SelectAll" /> @GetTranslation("SetDefault")
                     </MudMenuItem>
@@ -90,16 +90,16 @@
         <MudGrid>
             <MudItem xs="6">
                 <MudText Typo="Typo.caption" Class="holder-info-label">@GetTranslation("CardHolder")</MudText>
-                <MudText Typo="Typo.subtitle2" Class="holder-info-text">@GetCardHolderName()</MudText>
+                <MudText Typo="Typo.body1" Class="holder-info-text">@GetCardHolderName()</MudText>
             </MudItem>
             <!-- Expiry Date -->
             <MudItem xs="3" Class="expiry-date-container">
                 <MudText Typo="Typo.caption" Class="expiry-date-label">@GetTranslation("Expires")</MudText>
-                <MudText Typo="Typo.subtitle2" Class="expiry-date-text">@GetCardExpiry()</MudText>
+                <MudText Typo="Typo.body1" Class="expiry-date-text">@GetCardExpiry()</MudText>
             </MudItem>
             <MudItem xs="3">
                 <MudText Typo="Typo.caption" Class="expiry-date-label">@GetTranslation("CSV")</MudText>
-                <MudText Typo="Typo.subtitle2" Class="expiry-date-text">@GetCardCVC()</MudText>
+                <MudText Typo="Typo.body1" Class="expiry-date-text">@GetCardCVC()</MudText>
             </MudItem>
         </MudGrid>
 
