--- a/LAHJA/UI/Components/Payment/UpgradePlan.razor
+++ b/LAHJA/UI/Components/Payment/UpgradePlan.razor
@@ -57,7 +57,7 @@
         {
 
 
-            <div class="w46 mt-3">
+            <div class="w60 mt-3">
   
       
         
@@ -72,10 +72,11 @@
             </div>
         }
 
-        @if (true){
 
             <MudCard class="w46 mt-3">
 
+            @if (false)
+            {
                 <MudText Typo="Typo.h6" Class="mt-4">@LocalizedContent["PaymentFrequency"]</MudText>
 
                     <MudRadioGroup T="int" Value="selectedPaymentFrequency" ValueChanged="Clickfrequency" Class="mb-3 d-flex justify-content-around border p-3">
@@ -99,10 +100,11 @@
                     <MudText Typo="Typo.body1">@string.Format(LocalizedContent["PaymentDue"], DateTimeOffset.UtcNow.LocalDateTime.ToLongDateString() + " T " + DateTimeOffset.UtcNow.LocalDateTime.ToLongTimeString())</MudText>
                     <MudText Typo="Typo.h6">$@price</MudText>
                 </MudPaper>
-
-                    <MudButton Variant="Variant.Filled" Color="@AppColors.BASE_COLOR_ENUM" OnClick="OnSaveAndConfirm" Class="@(AppTextStyle.TEXT_TRANSFORM_NORMAL+" mt-2 w-100")">@LocalizedContent["Confirm"]</MudButton>
-        </MudCard>
         }
+
+            <MudButton Variant="Variant.Filled" Color="@AppColors.BASE_COLOR_ENUM" OnClick="OnSaveAndConfirm" Class="@(AppTextStyle.TEXT_TRANSFORM_NORMAL+" mt-2 w-100")">@LocalizedContent["Confirm"]</MudButton>
+        </MudCard>
+        
 
     </div>
    
