--- a/LAHJA/UI/Templates/Payment/TemplatePayment.razor
+++ b/LAHJA/UI/Templates/Payment/TemplatePayment.razor
@@ -54,8 +54,8 @@
                 if (planId != null)
                 {
                     await initializePlanAsync();
-                    await initializeBillingDetailsAsync();
-                    await initializeCreditCardDetailsAsync();
+                    // await initializeBillingDetailsAsync();
+                    // await initializeCreditCardDetailsAsync();
 
                 }
 
