--- a/LAHJA/UI/Components/Billing/Shared/CardsMethodsSection.razor
+++ b/LAHJA/UI/Components/Billing/Shared/CardsMethodsSection.razor
@@ -1,9 +1,11 @@
 ﻿@using Domain.ShareData
+@using LAHJA.Data.UI.Components
 @using LAHJA.Data.UI.Components.Payment.CreditCard
 @using LAHJA.Data.UI.Components.Payment.CreditCards
 @using LAHJA.Helpers.Services
-@using LAHJA.Them
+@using LAHJA.Them   
 @using LAHJA.UI.Components.Payment.CreditCard
+@using LAHJA.UI.Components.TabelCard
 @using MudBlazor
 @using System.Globalization
 @inject ISnackbar Snackbar
@@ -47,10 +49,15 @@
                         </MudCard>
                @*           <MudRadioGroup  T="CardDetails" ValueChanged="OnSelectedCard"> *@
                             <div class="d-flex flex-wrap justify-content-start align-items-center w-100">
-                                @foreach (var card in creditCards)
-                                {
-                                    <CreditCard BuildData="card" OnSetDefault="OnSelectedCard" OnDelete="OnDeleteCard" OnEdit="OnEditCard" />
-                                }
+                                @* @foreach (var card in creditCards) *@
+                                @* { *@
+                                <TabelDashCard T="CardDetails" DataAndEventBuildTabel="dataAndEvent"
+                                               StateCounts="cardStates"
+                                               ActionTabels="groupAction"
+                                           />
+                                @* BarTabel = "TranslationsLST" *@
+                                    @* <CreditCard BuildData="card" OnSetDefault="OnSelectedCard" OnDelete="OnDeleteCard" OnEdit="OnEditCard" /> *@
+                                @* } *@
                             </div>
                         @* </MudRadioGroup> *@
                         @if (_isSelected)
@@ -69,32 +76,15 @@
 @code
 {
 
-    private string CurrentLanguage = "ar";
-    public static Dictionary<string, string> TransEn = new Dictionary<string, string>()
-    {
-        { "CreditCards", "Credit Cards" },
-        { "AddNewCard", "Add New Card" },
-        { "EditCard", "Edit Credit Card" },
-        { "Expiry", "Expiry" },
-        { "CardType", "Card Type" },
-        { "Confirm", "Confirm" },
-        { "Cancel", "Cancel" },
-        { "Update", "Update" },
-        { "Save", "Save" },
-    };
+    private string lg = "ar";
 
-    public static Dictionary<string, string> TransAr = new Dictionary<string, string>()
-    {
-        { "CreditCards", "بطاقات الائتمان" },
-        { "AddNewCard", "إضافة بطاقة جديدة" },
-        { "EditCard", "تعديل بطاقة الائتمان" },
-        { "Expiry", "تاريخ الانتهاء" },
-        { "CardType", "نوع البطاقة" },
-        { "Confirm", "تأكيد" },
-        { "Cancel", "إلغاء" },
-        { "Update", "تحديث" },
-        { "Save", "حفظ" },
-    };
+    private DataAndEventBuildTabelCard<CardDetails> dataAndEvent;
+
+
+    private List<CardDetails>? _dataBuild = new();
+
+
+
 
 
     [Parameter] public EventCallback<CardDetails> SelectedCard { get; set; }
@@ -102,23 +92,49 @@
     [Parameter] public EventCallback<CardDetails> EditCard { get; set; }
     [Parameter] public EventCallback<CardDetails> DeleteCard { get; set; }
 
-    [Parameter] public List<CardDetails> BuildData { get => creditCards; set => creditCards=value; }
+    [Parameter] public List<CardDetails> BuildData { get => creditCards; set
+        {
+            if(value!=null)
+                creditCards = value;
+        } }
 
 
-    private List<CardDetails> creditCards = new List<CardDetails>{ };
+    private List<CardDetails> creditCards ;
     private CardDetails selectedCard = new CardDetails();
     private bool open, isUpdate = false;
     private bool _expanded = false;
     private bool _isSelected = false;
+    List<CardStateCount<string>>? cardStates = null;
+    GroupActionTabels groupAction = new GroupActionTabels();
+    private static readonly Dictionary<string, Dictionary<string, string>> TranslationsLST = new()
+        {
+            ["en"] = new()
+            {
+                ["Text1"] = "Add  CreditCard",
+                ["Text2"] = "",
+                ["Description"] = "",
+                ["ButtonLink"] = "Add CreditCard"
+            },
+            ["ar"] = new()
+            {
+                ["Text1"] = "إضافة بطاقة أئتمان ",
+                ["Text2"] = "",
+                ["Description"] = "",
+                ["ButtonLink"] = "إضافة بطاقة أئتمان "
+            }
+        };
 
     private IDialogReference dialogRef;
 
     protected override async void OnInitialized()
     {
-      
+        ChangeLanguage(lg);
 
-
-        if (creditCards != null  && SelectedCard.HasDelegate)      
+        if (creditCards == null)
+        {
+            creditCards = new List<CardDetails> { new CardDetails { CardNumber="454353455",HolderName="Azzaldeen",CardType="MasterCard",ExpirationDate="27/2",IsSelected=true } };
+        }
+        else if (SelectedCard.HasDelegate)      
         {
             if ((selectedCard == null || string.IsNullOrEmpty(selectedCard.CardNumber)) && creditCards?.Count() > 0)
                 selectedCard = creditCards[0];
@@ -127,13 +143,85 @@
                 await SelectedCard.InvokeAsync(selectedCard);
         }
 
-        // languageService.OnLanguageChanged += ChangeLanguage;
-        ChangeLanguage(CurrentLanguage);
+      
+
+        initData(creditCards);
+       
     }
 
+    private void initData(List<CardDetails> dataBuild)
+    {
+        dataAndEvent = new()
+            {
+                DataBuild = dataBuild,
+                LabelColumns = ColomsTrans[lg].ToList(),
+
+                Events = new()
+            };
+
+        cardStates = new()
+        {
+
+            new()
+            {
+                Value="6",
+                Label="Active"
+
+            },
+
+             new()
+            {
+                 Value="1",
+                Label="UnActive"
+            }
+            ,
 
 
+        };
+        groupAction.Actions = new()
+        {
+            new()
+            {
+                Icon=@Icons.Material.Filled.AddCircle
+                ,
+                Tag="create"
+                ,
+                Name="انشاء",
 
+            },
+            new()
+            {
+                Icon=@Icons.Material.Filled.Delete
+                ,
+                IsMudChip=false,
+                Tag="delete"
+            }
+        };
+        groupAction.ChipClicked += OnChipClicked;
+
+        // groupAction.CreateSpaceClicked = OnSubmitCreateSpace;
+    }
+    Dictionary<string, string[]> ColomsTrans = new Dictionary<string, string[]>
+        {
+            { "en", new string[] { "Card Number", "Holder Name","CardType", "ExpirationDate","Status" } },
+            { "ar", new string[] {"رقم البطاقة", "حامل البطاقة", "نوع البطاقة", "تأريخ الانتهاء","الحالة"} }
+        };
+    private async Task OnChipClicked(CardActionTabel action)
+    {
+        if (action.Tag == "delete")
+        {
+            Snackbar.Add("fgffg", Severity.Error);
+
+        }
+        else if (action.Tag == "create")
+        {
+            await OnAddCard();
+
+        }
+
+        // await Task.CompletedTask;
+
+    }
     private async Task OnAddCard()
     {
         isUpdate = false;
@@ -253,7 +341,7 @@
     }
     private string GetTranslation(string key)
     {
-        if (CurrentLanguage == "ar")
+        if (lg == "ar")
         {
             return TransAr.ContainsKey(key) ? TransAr[key] : key;
         }
@@ -270,7 +358,8 @@
 
         if (firstRender)
         {
-            CurrentLanguage = await _manageLanguageService.GetLanguageAsync();
+            lg = await _manageLanguageService.GetLanguageAsync();
+            initData(creditCards);
             InvokeAsync(StateHasChanged);
         }
 
@@ -279,9 +368,35 @@
     private void ChangeLanguage(string language)
     {
         // ااخ
-        CurrentLanguage = language;
+        lg = language;
         StateHasChanged();
     }
+
+    public static Dictionary<string, string> TransEn = new Dictionary<string, string>()
+    {
+        { "CreditCards", "Credit Cards" },
+        { "AddNewCard", "Add New Card" },
+        { "EditCard", "Edit Credit Card" },
+        { "Expiry", "Expiry" },
+        { "CardType", "Card Type" },
+        { "Confirm", "Confirm" },
+        { "Cancel", "Cancel" },
+        { "Update", "Update" },
+        { "Save", "Save" },
+    };
+
+    public static Dictionary<string, string> TransAr = new Dictionary<string, string>()
+    {
+        { "CreditCards", "بطاقات الائتمان" },
+        { "AddNewCard", "إضافة بطاقة جديدة" },
+        { "EditCard", "تعديل بطاقة الائتمان" },
+        { "Expiry", "تاريخ الانتهاء" },
+        { "CardType", "نوع البطاقة" },
+        { "Confirm", "تأكيد" },
+        { "Cancel", "إلغاء" },
+        { "Update", "تحديث" },
+        { "Save", "حفظ" },
+    };
  
 
 }
